hphp/test/zend/good/zend/ns_030.php.exp
HipHop Fatal error: Undefined class: A\\B in hphp/test/zend/good/zend/ns_030.php on line 7
