hphp/test/zend/good/zend/ns_030.php
<?php
class Foo {
}

use A\B as Foo;

new Foo();